kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repeaters-net-api
spec:
  selector:
    app.kubernetes.io/name: repeaters-net-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
