kubernetes/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-repeaters-net-api
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: repeaters.dszymanski.pl
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: repeaters-net-api
            port:
              number: 80
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: repeaters-net-api
            port:
              number: 80
  
  tls:
    - secretName: repeaters-net-tls
      hosts:
        - repeaters.dszymanski.pl
